updates on package json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
 "engine":{
   "npm": "6.4.1",
-  "node":"v10.15.3"
-},
+  "node":"v10.15.3"},
   "dependencies": {
     "firebase": "^7.0.0",
     "react": "^16.9.0",
